force-app/main/default/objects/Device__c/Device__c.object-meta.xml
<CustomObject>
    <label>Device</label>
    <nameField>
        <displayFormat>Device-{0000000}</displayFormat>
        <label>Device ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>