force-app/main/default/objects/Device__c/fields/AC_DC_Coupling__c.field-meta.xml
<CustomField>
    <fullName>AC_DC_Coupling__c</fullName>
    <description>Defines if system is AC or DC Coupled</description>
    <label>AC or DC Coupled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>