force-app/main/default/objects/Device__c/fields/AC_Equip_Cap__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Cap__c</fullName>
    <description>DER Register Level 2 – AC Connection
The rated AC output power that is listed in the product specified by the manufacturer.</description>
    <label>AC Equipment Capacity (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>