force-app/main/default/objects/Device__c/fields/AC_Equip_Exp__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Exp__c</fullName>
    <label>AC Equipment Export (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>