force-app/main/default/objects/Device__c/fields/AC_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Type__c</fullName>
    <description>DER Register Level 2 – AC Connection

Indicates whether the DER device is connected via an inverter (and what category of inverter it is) or not (e.g. rotating machine).</description>
    <label>AC Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Non-Inverter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>