force-app/main/default/objects/Device__c/fields/AEMO_Id__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Id__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>AEMO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>