force-app/main/default/objects/Device__c/fields/AEMO_Status__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Status__c</fullName>
    <description>DER Register Level 2 – AC Connection
DER Register Level 3 – DER Device


Code used to indicate the status of the AC Connection or Device. This will be used to identify if an AC Connection or Device is active or inactive or decommissioned.

This status will also track commissioning and decommissioning date. When a new record is inserted in the database, the installation date/ start date is defined by the user and may be backdated.</description>
    <label>AEMO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>