force-app/main/default/objects/Device__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>Lookup</type>
</CustomField>