force-app/main/default/objects/Device__c/fields/Battery_Depth_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Battery_Depth_of_Discharge__c</fullName>
    <label>Battery Depth of Discharge (kWh)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>