force-app/main/default/objects/Device__c/fields/CEC_ID__c.field-meta.xml
<CustomField>
    <fullName>CEC_ID__c</fullName>
    <label>CEC Inverter/Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>