force-app/main/default/objects/Device__c/fields/Commissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Date__c</fullName>
    <description>DER Register Level 2 – AC Connection
Comissioning Date is populated upon installation status becoming authorised (post validations)</description>
    <label>Commissioning Date</label>
    <type>Date</type>
</CustomField>