force-app/main/default/objects/Device__c/fields/Decommission__c.field-meta.xml
<CustomField>
    <fullName>Decommission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommission</label>
    <type>Checkbox</type>
</CustomField>