force-app/main/default/objects/Device__c/fields/DER_Application_fx__c.field-meta.xml
<CustomField>
    <fullName>DER_Application_fx__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&apos;Device_L2&apos;, DER_Application__r.Name,
&apos;Device_L3&apos;, Parent_Device__r.DER_Application__r.Name,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DER-Application</label>
    <type>Text</type>
</CustomField>