force-app/main/default/objects/Device__c/fields/Device_Count__c.field-meta.xml
<CustomField>
    <fullName>Device_Count__c</fullName>
    <description>DER Register Level 2 – AC Connection
Number of AC Connections in the group. For the suite of AC Connections to be considered as a group , all of the AC Connections included must have the same attributes.

DER Register Level 3 – DER Device
Number of devices in the group of DER devices.</description>
    <label>Device Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>