force-app/main/default/objects/Device__c/fields/Device_Flags__c.field-meta.xml
<CustomField>
    <fullName>Device_Flags__c</fullName>
    <formula>IF(Requested__c, &quot;Req&apos;d; &quot;, &quot;&quot;) + 
IF(Approved__c, &quot;App&apos;d; &quot;, &quot;&quot;) + 
IF(Installed__c, &quot;Inst; &quot;, &quot;&quot;) + 
IF(Existing_Device__c, &quot;Exist; &quot;, &quot;&quot;) + 
IF(Decommission__c, &quot;Decom; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Flags</label>
    <type>Text</type>
</CustomField>