force-app/main/default/objects/Device__c/fields/Device_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Device_Hierarchy__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&apos;Device_L2&apos;, DER_Application__r.Name &amp; &quot;/&quot; &amp; Name,
&apos;Device_L3&apos;,  Parent_Device__r.DER_Application__r.Name &amp; &quot;/&quot; &amp; Parent_Device__r.Name &amp; &quot;/&quot; &amp; Name,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Hierarchy</label>
    <type>Text</type>
</CustomField>