force-app/main/default/objects/Device__c/fields/Device_Phase__c.field-meta.xml
<CustomField>
    <fullName>Device_Phase__c</fullName>
    <description>Selection of the phase this device is on
If 3 Phase is selected, the Phase sits across Phase A, B, and C</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>3 Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>