force-app/main/default/objects/Device__c/fields/DRED_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DRED_Enabled__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>DRED Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>