force-app/main/default/objects/Device__c/fields/EAI_Parent__c.field-meta.xml
<CustomField>
    <fullName>EAI_Parent__c</fullName>
    <description>EAI Parent Reference</description>
    <label>EAI Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>