force-app/main/default/objects/Device__c/fields/EAI_Ref__c.field-meta.xml
<CustomField>
    <fullName>EAI_Ref__c</fullName>
    <description>EAI Reference</description>
    <label>EAI Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>