force-app/main/default/objects/Device__c/fields/EAI_Type__c.field-meta.xml
<CustomField>
    <fullName>EAI_Type__c</fullName>
    <description>EAI Device Type</description>
    <label>EAI Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>