force-app/main/default/objects/Device__c/fields/Existing_Device__c.field-meta.xml
<CustomField>
    <fullName>Existing_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Device</label>
    <type>Checkbox</type>
</CustomField>