force-app/main/default/objects/Device__c/fields/Fstop_over_freq__c.field-meta.xml
<CustomField>
    <fullName>Fstop_over_freq__c</fullName>
    <description>DER Register Level 2 – AC Connection

Frequency (stop)</description>
    <label>Fstop (over freq)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>