force-app/main/default/objects/Device__c/fields/Impedance__c.field-meta.xml
<CustomField>
    <fullName>Impedance__c</fullName>
    <label>Impedance (X)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>