force-app/main/default/objects/Device__c/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track Device history</description>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>