force-app/main/default/objects/Device__c/fields/Inv_Power_Factor_Mode__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Factor_Mode__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Power Factor Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>