force-app/main/default/objects/Device__c/fields/Inv_Power_Factor_P2__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Factor_P2__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Power Factor at P2</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>