force-app/main/default/objects/Device__c/fields/Inv_Power_Factor_Quad_P1__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Factor_Quad_P1__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Power Factor Quadrant at P1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>