force-app/main/default/objects/Device__c/fields/Inv_Power_Ramp_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inv_Power_Ramp_Rate__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Power Ramp Rate (Wgra)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>