force-app/main/default/objects/Device__c/fields/Inv_Ref_Point_P2__c.field-meta.xml
<CustomField>
    <fullName>Inv_Ref_Point_P2__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Reference Point P2</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>