force-app/main/default/objects/Device__c/fields/Inv_Var_Response_V2__c.field-meta.xml
<CustomField>
    <fullName>Inv_Var_Response_V2__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Inv Var Response V2</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>