force-app/main/default/objects/Device__c/fields/Inv_Vnom_max__c.field-meta.xml
<CustomField>
    <fullName>Inv_Vnom_max__c</fullName>
    <description>DER Register Level 2 – AC Connection

Indicates the sustained operation overvoltage limit, when the average voltage for a 10-minute period exceeds
the Vnom-max</description>
    <label>Inv Vnom-max</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>