force-app/main/default/objects/Device__c/fields/Leakage_Reactance__c.field-meta.xml
<CustomField>
    <fullName>Leakage_Reactance__c</fullName>
    <label>Leakage Reactance (XI)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>