force-app/main/default/objects/Device__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>DER Register Level 2 – AC Connection
DER Register Level 3 – DER Device

Identifies the device manufacturer</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>