force-app/main/default/objects/Device__c/fields/Max_Total_Harmonics__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Harmonics__c</fullName>
    <description>Level 2 Details
Relevant to &gt;30 Connections</description>
    <label>Maximum Total Harmonics (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>