force-app/main/default/objects/Device__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>DER Register Level 2 – AC Connection
DER Register Level 3 – DER Device

Identifies the device model</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>