force-app/main/default/objects/Device__c/fields/NMI_AEMO_Id__c.field-meta.xml
<CustomField>
    <fullName>NMI_AEMO_Id__c</fullName>
    <label>NMI / AEMO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>