force-app/main/default/objects/Device__c/fields/Nominal_Rated_Cap__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Rated_Cap__c</fullName>
    <description>DER Register Level 3 – DER Device
Maximum output in kVA that is listed in the product specification by the manufacturer. This refers to the capacity of each unit within the device group.</description>
    <label>Nominal Rated Capacity (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>