force-app/main/default/objects/Device__c/fields/Nominal_Storage_Cap__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Storage_Cap__c</fullName>
    <description>DER Register Level 3 – DER Device

Maximum storage capacity in kWh. This refers to the capacity of each storage module within the device group.</description>
    <label>Nominal Storage Capacity (kWh)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>