force-app/main/default/objects/Device__c/fields/Non_Inv_Base_for_Droop__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Base_for_Droop__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Non-Inv Base for Droop (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>