force-app/main/default/objects/Device__c/fields/Non_Inv_Gen_Freq_Deadband__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Gen_Freq_Deadband__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Non-Inv Gen Freq Deadband (Hz)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>